--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div class="mb">
-        <div class="pcnav">
+        <div class="mbnav">
             <div class="logo"><a href="index.html" style="text-decoration:none;">logo</a></div>
             <div class="contact"><a href="mailto:thorir@shapesbysons.com" class="text-link w-inline-block" style="text-decoration:none;">contact</a></div>
         </div>
@@ -76,7 +76,7 @@
         </div>
         <div class="container wow animate__animated animate__fadeInLeft animate__repeat-1">
             <class class="row selectedbg1">
-                <div class="col-6 ">
+                <div class="col-xl-6 col-md-12 ">
                     <div class="container">
                         <class class="row">
                             <div class="col selectedtext">
@@ -93,14 +93,14 @@
                         </class>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-xl-6 col-md-12">
                     <img src="/img/602ba1d3e25853220b0127e0_Snowhouse Portfolio.png" alt="" width="95%">
                 </div>
             </class>
         </div>
         <div class="container wow animate__animated animate__fadeInRight animate__repeat-1">
             <class class="row selectedbg2">
-                <div class="col-6">
+                <div class="col-xl-6 col-md-12">
                     <div class="container">
                         <class class="row">
                             <div class="col selectedtext">
@@ -109,18 +109,18 @@
                         </class>
                         <class class="row">
                             <div class="col-4 text">
-                                <h6>DESIGN</h6>
+                                <h6>Design</h6>
                             </div>
                             <div class="col-4 text">
-                                <h6>WEBFLOW</h6>
+                                <h6>Webflow</h6>
                             </div>
                             <div class="col-4 text">
-                                <h6>WORDPRESS</h6>
+                                <h6>wordpress</h6>
                             </div>
                         </class>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-xl-6 col-md-12">
                     <img src="/img/602ba5a21d599978a5b12518_Laugin Portfolio.png" alt="" width="95%">
                 </div>
             </class>
