--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </class>
         </div>
     </section>
-    <section>
+    <section class=sw>
         <div class="container">
             <class class="row">
                 <a name="ourwork" id="ourwork"></a>
