--- a/index.html
+++ b/index.html
@@ -14,22 +14,23 @@
 </head>
 
 <body>
-    <div class="pc">
-        <div class="pcnav">
-            <div class="logopc"><a href="index.html" style="text-decoration:none;">logo</a></div>
-            <div class="services"> <a href="#services" style="text-decoration:none;">services</a></div>
-            <div class="ourwork"> <a href="#ourwork" style="text-decoration:none;">ourwork</a></div>
-            <div class="PROCESS"> <a href="#process" style="text-decoration:none;">process</a></div>
-            <div class="aboutnav"> <a href="#about" style="text-decoration:none;">about</a></div>
-            <div class="contactpc"><a href="mailto:thorir@shapesbysons.com" class="text-link w-inline-block" style="text-decoration:none;">contact</a></div>
+    <section class="navbar">
+        <div class="pc">
+            <div class="pcnav">
+                <div class="logopc"><a href="index.html" style="text-decoration:none;">logo</a></div>
+                <div class="services"> <a href="#services" style="text-decoration:none;">services</a></div>
+                <div class="ourwork"> <a href="#ourwork" style="text-decoration:none;">ourwork</a></div>
+                <div class="PROCESS"> <a href="#process" style="text-decoration:none;">process</a></div>
+                <div class="aboutnav"> <a href="#about" style="text-decoration:none;">about</a></div>
+                <div class="contactpc"><a href="mailto:thorir@shapesbysons.com" class="text-link w-inline-block" style="text-decoration:none;">contact</a></div>
+            </div>
         </div>
-    </div>
-    <div class="mb">
-        <div class="mbnav">
-            <div class="logo"><a href="index.html" style="text-decoration:none;">logo</a></div>
-            <div class="contact"><a href="mailto:thorir@shapesbysons.com" class="text-link w-inline-block" style="text-decoration:none;">contact</a></div>
-        </div>
-
+        <div class="mb">
+            <div class="mbnav">
+                <div class="logo"><a href="index.html" style="text-decoration:none;">logo</a></div>
+                <div class="contact"><a href="mailto:thorir@shapesbysons.com" class="text-link w-inline-block" style="text-decoration:none;">contact</a></div>
+            </div>
+    </section>
     </div>
     <section class="green">
         <div class="h1text">
@@ -80,7 +81,7 @@
                     <div class="container">
                         <class class="row">
                             <div class="col selectedtext">
-                                <h1>Snowhouse.Studio</h1>
+                                <h4>Snowhouse.Studio</h4>
                             </div>
                         </class>
                         <class class="row">
@@ -94,7 +95,7 @@
                     </div>
                 </div>
                 <div class="col-xl-6 col-md-12">
-                    <img src="/img/602ba1d3e25853220b0127e0_Snowhouse Portfolio.png" alt="" width="95%">
+                    <img src="img/602ba1d3e25853220b0127e0_Snowhouse Portfolio.png" alt="" width="95%">
                 </div>
             </class>
         </div>
@@ -104,7 +105,7 @@
                     <div class="container">
                         <class class="row">
                             <div class="col selectedtext">
-                                <h1>Snowhouse.Studio</h1>
+                                <h4>Laugin.is </h4>
                             </div>
                         </class>
                         <class class="row">
@@ -121,7 +122,7 @@
                     </div>
                 </div>
                 <div class="col-xl-6 col-md-12">
-                    <img src="/img/602ba5a21d599978a5b12518_Laugin Portfolio.png" alt="" width="95%">
+                    <img src="img/602ba5a21d599978a5b12518_Laugin Portfolio.png" alt="" width="95%">
                 </div>
             </class>
         </div>
@@ -132,27 +133,29 @@
                 <a name="process" id="process"></a>
                 <div class="col hwwheader wow animate__animated animate__fadeInUp animate__repeat-1 ">
                     <h1>How we work</h1>
-                    <p>Our approach to each project is simple yet effective: we map out a clear and measurable plan so that you can meet your goals, increase conversion and build trust with your customers. Tell us what you want – and we'll get to work.</p>
+                    <div class="hwwheadertext">
+                        <p>Our approach to each project is simple yet effective: we map out a clear and measurable plan so that you can meet your goals, increase conversion and build trust with your customers. Tell us what you want – and we'll get to work.</p>
+                    </div>
                 </div>
             </class>
         </div>
         <div class="container hwwtext">
             <class class="row">
-                <div class="col-xl-6 col-md-12   bghww wow animate__animated animate__fadeInUp animate__repeat-1 ">
+                <div class="col-xl-6 col-md-12 howwidth  bghww wow animate__animated animate__fadeInUp animate__repeat-1 ">
                     <h4>Discover</h4>
                     <p>Getting creative can be one of the most exciting parts of a new project. So, before we make your ideas a reality, we'll take the time to get to know your company, define your brand, and map out a strategy to meet your goals.</p>
                 </div>
-                <div class="col-xl-6 col-md-12   bghww wow animate__animated animate__fadeInUp animate__repeat-1 ">
+                <div class="col-xl-6 col-md-12 howwidth  bghww wow animate__animated animate__fadeInUp animate__repeat-1 ">
                     <h4>Design</h4>
                     <p>Once the plan has been finalised, we'll apply our problem-solving skills to ensure we've understood your audience and their needs. We'll design your website with all of that information in mind, crafting a prototype with creativity
                         and attention to detail.</p>
                 </div>
-                <div class="col-xl-6 col-md-12   bghww wow animate__animated animate__fadeInUp animate__repeat-1 ">
+                <div class="col-xl-6 col-md-12 howwidth  bghww wow animate__animated animate__fadeInUp animate__repeat-1 ">
                     <h4>Build</h4>
                     <p>Using the award-winning Webflow platform to harness the power of CMS and SEO, we’ll bring your website to life. We’ll make sure it’s fast, easy to use and offers a seamless user experience. By testing it on various devices and platforms,
                         we’ll also be able to make any necessary adjustments so that it works seamlessly – and looks great.</p>
                 </div>
-                <div class="col-xl-6 col-md-12   bghww wow animate__animated animate__fadeInUp animate__repeat-1 ">
+                <div class="col-xl-6 col-md-12 howwidth   bghww wow animate__animated animate__fadeInUp animate__repeat-1 ">
                     <h4>Deliver</h4>
                     <p>On time. On budget. That's how we finish every project. When your website goes live (champagne, anyone?) we can stick around to update, maintain and make improvements along the way. Your success is our success – we’d love to follow
                         you on your exciting new journey.</p>
@@ -174,12 +177,18 @@
                             </div>
                             <class class="row">
                                 <div class="col-xl-6 col-md-12  bgabout wow animate__animated animate__fadeInUp animate__repeat-1">
-                                    <img src="/img/6029611135d51a316a00f1c0_Thorir Runarsson.png" alt="" width="100%">
-                                    <div class="name">Thorir Runarsson <br> Designer</div>
+                                    <img src="img/6029611135d51a316a00f1c0_Thorir Runarsson.png" alt="" width="100%">
+                                    <div class="team-memeber-wrap">
+                                        <h3 class="heading-3 profile">Thorir Runarsson</h3>
+                                        <div class="title">Designer</div>
+                                    </div>
                                 </div>
-                                <div class="col-xl-6 col-md-12   bgabout wow animate__animated animate__fadeInUp animate__repeat-1">
-                                    <img src="/img/602961214361dccc0485f002_David Saevarsson.png" alt="" width="100%">
-                                    <div class="name1">Thorir Runarsson <br> Designer</div>
+                                <div class="col-xl-6 col-md-12    bgabout wow animate__animated animate__fadeInUp animate__repeat-1">
+                                    <img src="img/602961214361dccc0485f002_David Saevarsson.png" alt="" width="100%">
+                                    <div class="team-memeber-wrap">
+                                        <h3 class="heading-3 profile">David Saevarsson</h3>
+                                        <div class="title">Developer</div>
+                                    </div>
                                 </div>
                             </class>
                         </class>
@@ -194,27 +203,27 @@
             <div class="mail"><a href="mailto:thorir@shapesbysons.com" class="text-link w-inline-block" style="text-decoration:none;">thorir@shapesbysons.com</a> </div>
         </div>
     </section>
-    <footer class="green">
+    <!-- <footer class="green"> -->
 
-        <div class="footer">
-            <div class="pc">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th class="copy">&copy; 2021 Richard Chen</th>
-                            <th> <a href="mailto:hello@shapesbysons.com" class="mail" style="text-decoration:none;">hello@shapesbysons.com</a></th>
-                            <th class="copy">&copy; 2021 Richard Chen</th>
-                        </tr>
-                    </thead>
-                </table>
-            </div>
-            <div class="mb">
-                <div class="copy">&copy; 2021 Richard Chen</div>
-                <th> <a href="mailto:hello@shapesbysons.com" class="mail" style="text-decoration:none;">hello@shapesbysons.com</a></th>
-                <div class="copy">&copy; 2021 Richard Chen</div>
+    <footer id="footer" class="footer">
+        <div class=" pc   ">
+            <div class="footer-wrapper">
+                <div class="copywrite">© Shapes by Sons 2018 - 2021</div>
+                <div class="text-block-2">-</div><a href="mailto:hello@shapesbysons.com" class="email-footer">hello@shapesbysons.com</a>
+                <div class="text-block-2-copy">-</div>
+                <div class="copywrite">by <a href="https://snowhouse.studio/" target="_blank" class="link">Snowhouse.Studio</a></div>
             </div>
         </div>
+        <div class=" mb   ">
+
+            <div class="copywrite">© Shapes by Sons 2018 - 2021</div>
+            <div class="text-block-2"> </div><a href="mailto:hello@shapesbysons.com" class="email-footer">hello@shapesbysons.com</a>
+
+            <div class="copywrite">by <a href="https://snowhouse.studio/" target="_blank" class="link">Snowhouse.Studio</a></div>
+
+        </div>
     </footer>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
