--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
             </class>
         </div>
         <div class="container hwwtext">
-            <class class="row">
+            <class class="row  ">
                 <div class="col-xl-6 col-md-12 howwidth  bghww wow animate__animated animate__fadeInUp animate__repeat-1 ">
                     <h4>Discover</h4>
                     <p>Getting creative can be one of the most exciting parts of a new project. So, before we make your ideas a reality, we'll take the time to get to know your company, define your brand, and map out a strategy to meet your goals.</p>
                 </div>
-                <div class="col-xl-6 col-md-12 howwidth  bghww wow animate__animated animate__fadeInUp animate__repeat-1 ">
+                <div class="col-xl-6 col-md-12 howwidth  bghww  wow animate__animated animate__fadeInUp animate__repeat-1 ">
                     <h4>Design</h4>
                     <p>Once the plan has been finalised, we'll apply our problem-solving skills to ensure we've understood your audience and their needs. We'll design your website with all of that information in mind, crafting a prototype with creativity
                         and attention to detail.</p>
@@ -155,7 +155,7 @@
                     <p>Using the award-winning Webflow platform to harness the power of CMS and SEO, we’ll bring your website to life. We’ll make sure it’s fast, easy to use and offers a seamless user experience. By testing it on various devices and platforms,
                         we’ll also be able to make any necessary adjustments so that it works seamlessly – and looks great.</p>
                 </div>
-                <div class="col-xl-6 col-md-12 howwidth   bghww wow animate__animated animate__fadeInUp animate__repeat-1 ">
+                <div class="col-xl-6 col-md-12 howwidth   bghww  wow animate__animated animate__fadeInUp animate__repeat-1 ">
                     <h4>Deliver</h4>
                     <p>On time. On budget. That's how we finish every project. When your website goes live (champagne, anyone?) we can stick around to update, maintain and make improvements along the way. Your success is our success – we’d love to follow
                         you on your exciting new journey.</p>
@@ -171,7 +171,7 @@
                 <div class="col-xl-8 col-md-12   bgabout">
                     <div class="container hwwtext">
                         <class class="row">
-                            <div class="col bgabout wow animate__animated animate__fadeInUp animate__repeat-1">
+                            <div class="col bgabout abouttext wow animate__animated animate__fadeInUp animate__repeat-1">
                                 Hi 👋, we're Thorir and David, from Reykjavík, Iceland. <br> We believe in empowering small businesses through innovative website design. Having <br>co-founded and run our own online companies, we know how transformative
                                 a powerful<br> digital experience can be. For companies and customers alike.<br> And if you work with us – whether you're based in Iceland or further afield – you'll get a<br> flexible, personal and transparent service.<br>                                Oh, and a website tailored to your business, of course...
                             </div>
