--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
         <div class="h1text">
             <h1 class="heading-1 hero">We live, breathe and build <br> <span class="text-span-4">Webflow websites</span> for small <br> businesses and start-ups<span class="text-span-7">.</span></h1>
 
-            <div class="text-block"><a href="mailto:thorir@shapesbysons.com" class="text-link w-inline-block" style="text-decoration:none;">Say hello</a></div>
-
+            <a href="mailto:thorir@shapesbysons.com" class="text-link w-inline-block">
+                <div class="text-block">Say hello</div>
+            </a>
         </div>
 
         <div class="container">
@@ -199,7 +200,7 @@
     </section>
     <section class="green  ">
         <div class="chat">
-            <h1 class="heading-1 hero wow animate__animated animate__fadeInUp animate__repeat-1"><a href="mailto:thorir@shapesbysons.com" class="text-link w-inline-block" style="text-decoration:none;">Let's chat</a></h1><br>
+            <h1 class="heading-1 hero wow chatcolor animate__animated animate__fadeInUp animate__repeat-1"><a href="mailto:thorir@shapesbysons.com" class="text-link w-inline-block" style="text-decoration:none;">Let's chat</a></h1><br>
             <div class="mail"><a href="mailto:thorir@shapesbysons.com" class="text-link w-inline-block" style="text-decoration:none;">thorir@shapesbysons.com</a> </div>
         </div>
     </section>
