--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <class class="row">
                 <a name="services" id="services"></a>
                 <div class="col wow animate__animated animate__fadeInUp ">
-                    <h1>What we do.</h1>
+                    <h2>What we do.</h2>
                     <p>Design, build and maintain websites. We're committed to <br> developing online spaces that deliver the best possible <br> digital experience. Beauty and function – in equal measure.</p>
                 </div>
             </class>
@@ -72,7 +72,7 @@
             <class class="row">
                 <a name="ourwork" id="ourwork"></a>
                 <div class="col selected wow animate__animated animate__fadeInUp animate__repeat-1 ">
-                    <h1>Selected work</h1>
+                    <h2>Selected work</h2>
                 </div>
             </class>
         </div>
@@ -133,7 +133,7 @@
             <class class="row">
                 <a name="process" id="process"></a>
                 <div class="col hwwheader wow animate__animated animate__fadeInUp animate__repeat-1 ">
-                    <h1>How we work</h1>
+                    <h2>How we work.</h2>
                     <div class="hwwheadertext">
                         <p>Our approach to each project is simple yet effective: we map out a clear and measurable plan so that you can meet your goals, increase conversion and build trust with your customers. Tell us what you want – and we'll get to work.</p>
                     </div>
