--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                 <a name="services" id="services"></a>
                 <div class="col wow animate__animated animate__fadeInUp ">
                     <h2>What we do.</h2>
-                    <p>Design, build and maintain websites. We're committed to <br> developing online spaces that deliver the best possible <br> digital experience. Beauty and function – in equal measure.</p>
+                    <div class="wwd">
+                        <p>Design, build and maintain websites. We're committed to developing online spaces that deliver the best possible digital experience. Beauty and function – in equal measure.</p>
+                    </div>
                 </div>
             </class>
         </div>
@@ -167,7 +169,7 @@
             <class class="row">
                 <a name="about" id="about"></a>
                 <div class="col-xl-4 col-md-12   bgabout about wow animate__animated animate__fadeInUp animate__repeat-1">
-                    <h1>About</h1>
+                    <h2>About</h2>
                 </div>
                 <div class="col-xl-8 col-md-12   bgabout">
                     <div class="container hwwtext">
