--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 <body>
     <div class="nav-section">
         <div class="container w-container">
-            <div class="div-block-4"><img src="./ShapesBySons _ We Create Webflow Websites _ Web Design &amp; Development in Reykjavik Iceland_files/60253823c957d4215e1d2bdf_Logo White.svg" loading="lazy" width="74" alt="Shapes by sons logo"><a href="mailto:hello@shapesbysons.com"
-                    class="nav-btn w-button">contact</a></div>
+            <div class="div-block-4"><img src="" loading="lazy" width="74" alt="Shapes by sons logo"><a href="mailto:hello@shapesbysons.com" class="nav-btn w-button">contact</a></div>
         </div>
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
