--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
         <nav class="container-2 w-container">
-            <a href="https://www.shapesbysons.com/#" class="w-nav-brand"><img src="./ShapesBySons _ We Create Webflow Websites _ Web Design &amp; Development in Reykjavik Iceland_files/60253823c957d4215e1d2bdf_Logo White.svg" loading="lazy" alt="Shapes by sons logo" class="image-2"></a>
+            <a href="https://www.shapesbysons.com/#" class="w-nav-brand"><img src="./ShapesBySons _ We Create Webflow Websites _ Web Design &amp; D"image-2"></a>
             <nav role="navigation" class="w-nav-menu"><a href="https://www.shapesbysons.com/#services" class="nav-link w-nav-link" style="max-width: 1440px;">services</a><a href="https://www.shapesbysons.com/#work" class="nav-link w-nav-link" style="max-width: 1440px;">our work</a><a href="https://www.shapesbysons.com/#process"
                     class="nav-link w-nav-link" style="max-width: 1440px;">process</a><a href="https://www.shapesbysons.com/#about" class="nav-link w-nav-link" style="max-width: 1440px;">about</a><a href="mailto:thorir@shapesbysons.com" class="nav-link btn w-nav-link"
                     style="max-width: 1440px;">contact</a></nav>
