--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0038)https://www.shapesbysons.com/#services -->
+<!-- saved from url=(0038)#services -->
 <html data-wf-domain="www.shapesbysons.com" data-wf-page="6025226c12a9a446d0637c8b" data-wf-site="6025226c12a9a49908637c8a" class="w-mod-js w-mod-ix wf-manrope-n6-active wf-manrope-n4-active wf-manrope-n3-active wf-manrope-n7-active wf-manrope-n5-active wf-active">
 
 <head>
@@ -16,15 +16,18 @@
 <body>
     <div class="nav-section">
         <div class="container w-container">
-            <div class="div-block-4"><img src="" loading="lazy" width="74" alt="Shapes by sons logo"><a href="mailto:hello@shapesbysons.com" class="nav-btn w-button">contact</a></div>
+            <div class="div-block-4"><img src="" loading="lazy" width="74" alt="Shapes by sons logo"><a href="#" class="nav-btn w-button">contact</a></div>
         </div>
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
         <nav class="container-2 w-container">
-            <a href="https://www.shapesbysons.com/#" class="w-nav-brand"><img src="./ShapesBySons _ We Create Webflow Websites _ Web Design &amp; D"image-2"></a>
-            <nav role="navigation" class="w-nav-menu"><a href="https://www.shapesbysons.com/#services" class="nav-link w-nav-link" style="max-width: 1440px;">services</a><a href="https://www.shapesbysons.com/#work" class="nav-link w-nav-link" style="max-width: 1440px;">our work</a><a href="https://www.shapesbysons.com/#process"
-                    class="nav-link w-nav-link" style="max-width: 1440px;">process</a><a href="https://www.shapesbysons.com/#about" class="nav-link w-nav-link" style="max-width: 1440px;">about</a><a href="mailto:thorir@shapesbysons.com" class="nav-link btn w-nav-link"
-                    style="max-width: 1440px;">contact</a></nav>
+            <a href="#" class="w-nav-brand"><img src="./ShapesBySons _ We Create Webflow Websites _ Web Design &amp; D"image-2"></a>
+            <nav role="navigation" class="w-nav-menu">
+                <a href="#services" class="nav-link w-nav-link" style="max-width: 1440px;">services</a>
+                <a href="#work" class="nav-link w-nav-link" style="max-width: 1440px;">our work</a>
+                <a href="#process" class="nav-link w-nav-link" style="max-width: 1440px;">process</a>
+                <a href="#about" class="nav-link w-nav-link" style="max-width: 1440px;">about</a>
+                <a href="mailto:thorir@shapesbysons.com" class="nav-link btn w-nav-link" style="max-width: 1440px;">contact</a></nav>
             <div class="menu-button w-nav-button" style="-webkit-user-select: text;" aria-label="menu" role="button" tabindex="0" aria-controls="w-nav-overlay-0" aria-haspopup="menu" aria-expanded="false">
                 <div class="w-icon-nav-menu"></div>
             </div>
@@ -63,7 +66,7 @@
             </div>
         </div>
     </section>
-    <section id="work " class="section ">
+    <section id="work" class="section ">
         <div class="container w-container ">
             <h2 class="heading-2 wow animate__animated animate__fadeInUp animate__repeat-1 ">Selected work<span class="dot-green ">.</span></h2>
             <div class="grid-portfolio ">
@@ -100,7 +103,7 @@
             </div>
         </div>
     </section>
-    <section id="process " class="section hww ">
+    <section id="process" class="section hww ">
         <div class="container w-container ">
             <div class="h2-wrapper wow animate__animated animate__fadeInUp animate__repeat-1 ">
                 <h2 class="heading-2 work ">How we work<span class="dot-green ">.</span></h2>
@@ -129,7 +132,7 @@
             </div>
         </div>
     </section>
-    <section id="about " class="section-light-green ">
+    <section id="about" class="section-light-green ">
         <div class="container w-container ">
             <div class="w-layout-grid grid-3 ">
                 <div>
