--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
         <nav class="container-2 w-container">
-            <a href="#" class="w-nav-brand"><img src="./ShapesBySons _ We Create Webflow Websites _ Web Design &amp; D"image-2"></a>
+            <a href="#" class="w-nav-brand"><img src=" ">logo</a>
             <nav role="navigation" class="w-nav-menu">
                 <a href="#services" class="nav-link w-nav-link" style="max-width: 1440px;">services</a>
                 <a href="#work" class="nav-link w-nav-link" style="max-width: 1440px;">our work</a>
