--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
         <div class="container w-container ">
             <div class="footer-wrapper ">
                 <div class="copywrite ">© Shapes by Sons 2018 - 2021</div>
-                <div class="text-block-2 ">-</div><a href="mailto:hello@shapesbysons.com " class="email-footer ">hello@shapesbysons.com</a>
+                <div class="text-block-2 ">-</div>
+                <a href="mailto:hello@shapesbysons.com " class="email-footer ">hello@shapesbysons.com</a>
                 <div class="text-block-2-copy ">-</div>
                 <div class="copywrite ">by <a href="https://snowhouse.studio/ " target="_blank " class="link ">Snowhouse.Studio</a></div>
             </div>
